@@ -4,6 +4,11 @@ Changelog for plone.i18n
 
 plone.i18n - 1.0.6 Unreleased
 
+    - Added normalization for a French-only character (igature of o and e)
+      which isn't part of ISO 8859-1. This closes
+      http://dev.plone.org/plone/ticket/7512.
+      [dbaty, hannosch]
+
     - Fixed the greek character normalization based on a patch by ggozad.
       This closes http://dev.plone.org/plone/ticket/8308.
       [hannosch]
